// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prompt-initial should do correct initial message 1`] = `
"#PUBLIC
Hello [A](Cat) and [B](Dog). I'm Mediator, here to assist you both in finding a resolution to your dilemma. For a successful mediation, let's remember to be respectful and patient with each other's point of view, it's crucial to understanding the situation at hand. The dispute we are discussing seems to be about a difference in preferences - One of you wants to play inside while the other wants to play outside. 

To begin, I'll further ask [A](Cat), can you please describe more about why you prefer to play inside? 
#SECRET_A
#SECRET_B
#END"
`;

exports[`prompt-initial should reply private message to private message 1`] = `
"#PUBLIC
#SECRET_A
Absolutely, [A](Cat), we can continue in private. I respect your privacy and wish to create a safe environment for the conversation. 
#SECRET_B
#END"
`;

exports[`prompt-initial should reply send messages to both participants 1`] = `
"#PUBLIC
#SECRET_A
[A](Cat), I understand. I will speak with [B](Dog) privately.
#SECRET_B
[B](Dog), [A](Cat) has requested that I ask you privately about why you prefer to play outside. Can you please tell me your thoughts on this? 
#END"
`;
